# inflation-dashboard

./: README.md  pyproject.toml  requirements.txt
src/inflation/: app.py  charts_creator.py  data_loader.py
src/inflation/assets/: styles.css
